using UnityEngine;
internal class AnimationBoss
{
    internal static string hasTarget = "hasTarget";
    internal static string canMove = "canMove";
    internal static string isHit = "isHit";
    internal static string isAlive = "isAlive";
    internal static string canUseAbility = "canUseAbility";
}