using System.Collections;
using System.Collections.Generic;
using UnityEngine;
internal static class AnimationString 
{
    internal static string IsMoving = "isMoving";
    internal static string IsRunning = "isRunning";
    internal static string IsGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string IsJumping = "isJumping";
    internal static string IsOnWall = "isOnWall";
    internal static string IsOnCelling = "isOnCelling";
    internal static string IsNormalAttack = "attack";
    internal static string IsComboAttack = "AttackCombo";
    internal static string canMove = "canMove";
    internal static string IsRoll = "isRoll";
}
